--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,9 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    .nav
+      %p.title
+        Twisp（仮）-喋ってツイート-        
     - if user_signed_in?
       = link_to 'sign out',destroy_user_session_path,method: :delete
     - else
